scroll and alignment fixed

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -111,6 +111,24 @@ input:focus {
   padding-bottom: 20px; /* Add padding-bottom to create space at the bottom of the container */
 }
 
+.container::-webkit-scrollbar {
+  width: 0.5rem; /* Set the width of the scrollbar */
+  background-color: transparent; /* Set the background color of the scrollbar track */
+}
+
+.container::-webkit-scrollbar-thumb {
+  background-color: transparent; /* Set the color of the scrollbar thumb */
+}
+
+.container::-webkit-scrollbar-thumb:hover {
+  background-color: transparent; /* Set the color of the scrollbar thumb on hover */
+}
+
+.container::-webkit-scrollbar {
+  display: none;
+}
+
+
 .search-container {
   display: flex;
   flex-direction: column;
@@ -158,8 +176,6 @@ input:focus {
   }
 }
 } 
-
-
 
 .line {
   width: 100%;
